trunk/Archive2/fb/de438e870f8461/output
main.cpp: In function 'void test()':
main.cpp:30:13: error: use of deleted function 'void ref(const T&&) [with T = int]'
     ref(ax());
             ^
main.cpp:14:6: note: declared here
 void ref(const T&&) = delete;
      ^
main.cpp:31:13: error: use of deleted function 'void ref(const T&&) [with T = int]'
     ref(bx());
             ^
main.cpp:14:6: note: declared here
 void ref(const T&&) = delete;
      ^
main.cpp:32:13: error: use of deleted function 'void ref(const T&&) [with T = volatile int]'
     ref(cx());
             ^
main.cpp:14:6: note: declared here
 void ref(const T&&) = delete;
      ^
main.cpp:33:13: error: use of deleted function 'void ref(const T&&) [with T = volatile int]'
     ref(dx());
             ^
main.cpp:14:6: note: declared here
 void ref(const T&&) = delete;
      ^
main.cpp:35:13: error: use of deleted function 'void ref(const T&&) [with T = int]'
     ref(ap());
             ^
main.cpp:14:6: note: declared here
 void ref(const T&&) = delete;
      ^
main.cpp:36:13: error: use of deleted function 'void ref(const T&&) [with T = int]'
     ref(bp());
             ^
main.cpp:14:6: note: declared here
 void ref(const T&&) = delete;
      ^
main.cpp:37:13: error: use of deleted function 'void ref(const T&&) [with T = int]'
     ref(cp());
             ^
main.cpp:14:6: note: declared here
 void ref(const T&&) = delete;
      ^
main.cpp:38:13: error: use of deleted function 'void ref(const T&&) [with T = int]'
     ref(dp());
             ^
main.cpp:14:6: note: declared here
 void ref(const T&&) = delete;
      ^
